--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/UjwalMishra/API_Throttling_Backend#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/node": "^25.0.6",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
@@ -34,6 +35,7 @@
     "@types/nodemailer": "^7.0.5",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
